--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="app"></div>
-    <script src="./bundle.js"></script>
+    <script src="static/js/bundle.js"></script>
   </body>
 </html>
